<resources>
    <string name="app_name">WE VOTE</string>
    <string name="sign_in">Вход в аккаунт</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль…</string>
    <string name="continue_to">Продолжить</string>
    <string name="no_account_yet">Ещё нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="user_name">Имя пользователя</string>
    <string name="enter_user_name">Введите имя пользователя…</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date_format">Формат ввода: xx.xx.xxxx</string>
    <string name="city">Город</string>
    <string name="enter_city_name">Введите название города…</string>
    <string name="select_city">Выберите город…</string>
    <string name="register">Зарегистрироваться</string>
    <string name="slogan">Твой взгляд формирует завтрашний день</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="search">Поиск…</string>
    <string name="default_recycler_text">Как Вы относитесь к идее проведения ночных киномарафонов в нашем кинотеатре?</string>
    <string name="vote">Участвовать</string>
    <string name="surveys">Опросы</string>
    <string name="default_value">default</string>
    <string name="surveys_completed">Пройдено опросов:</string>
    <string name="change_personal_info">Изменить данные</string>
    <string name="log_out">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="survey">Опрос</string>
    <string name="cast_a_vote">Сохранить выбор</string>
    <string name="new_survey">Новый опрос</string>
    <string name="new_survey_subtitle">Заполните форму для создания голосования</string>
    <string name="survey_contents">Вопрос</string>
    <string name="enter_survey_contents">Введите содержание опроса…</string>
    <string name="choice">Варианты ответов </string>
    <string name="enter_first_choice">Введите первый вариант ответа…</string>
    <string name="second_choice">Второй вариант ответа</string>
    <string name="enter_second_choice">Введите второй вариант ответа…</string>
    <string name="third_choice">Третий вариант ответа</string>
    <string name="enter_third_choice">Введите третий вариант ответа…</string>
    <string name="publish">Опубликовать</string>
    <string name="results">Результат</string>
    <string name="delete_from_archive">Удалить из архива</string>
    <string name="delete">Удалить</string>
    <string name="archive">Результаты</string>
    <string name="default_percent">65%</string>
    <string name="end_survey">Завершить</string>
    <string name="completed_survey">Завершённый опрос</string>
    <string name="percent">%</string>
    <string name="personal_info_change">Изменение данных</string>
    <string name="confirm">Сохранить изменения</string>
    <string name="email">Электронная почта</string>
    <string name="enter_email">Введите электронную почту…</string>
    <string name="voting_error">Ошибка голосования</string>
    <string name="successful_voting_message">Вы успешно проголосовали!</string>
    <string name="are_you_sure">Вы уверены, что хотите архивировать данный опрос?</string>
    <string name="are_you_sure_update">Вы уверены, что хотите сохранить изменения?</string>
    <string name="are_you_sure_delete">Вы уверены, что хотите удалить данный опрос?</string>
    <string name="sure">Архивировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="search_history">История запросов</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="data_load_error">Ошибка загрузки данных</string>
    <string name="retry_load">Обновить</string>
    <string name="clear">Очистить</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="search_history_empty">История запросов пуста</string>
    <string name="survey_created">Голосование добавлено</string>
    <string name="application_sent">Заявка отправлена на рассмотрение</string>
    <string name="survey_creation_error">Ошибка создания голосования</string>
    <string name="network_error">Ошибка сети:</string>
    <string name="account_created">Учётная запись создана</string>
    <string name="account_creation_error">Ошибка создания учётной записи</string>
    <string name="login_error">Ошибка входа</string>
    <string name="user_data_error">Ошибка при получении пользователя: %1$s</string>
    <string name="enter_new_password">Введите новый пароль…</string>
    <string name="account_updated">Данные обновлены</string>
    <string name="my_requests">Заявки</string>
    <string name="theme_app">Тема приложения</string>
    <string name="first_choice">Первый вариант ответа</string>
    <string name="new_requests">Новые заявки</string>
    <string name="filter_new">Новые</string>
    <string name="filter_accepted">Принятые</string>
    <string name="filter_rejected">Отклонённые</string>
    <string name="cancel_application">Отменить заявку</string>
    <string name="cancel_application_confirm">Вы уверены, что хотите отменить заявку? Это действие нельзя отменить.</string>
    <string name="application_cancelled">Заявка отменена</string>
    <string name="status_pending">Опрос подан на рассмотрение</string>
    <string name="status_accepted">Опрос принят</string>
    <string name="status_rejected">Опрос отклонён</string>
    <string name="accept">Принять</string>
    <string name="reject">Отклонить</string>
    <string name="close">Закрыть</string>
    <string name="answer_options">Варианты ответов:</string>
    <string name="question_label">Вопрос</string>
    <string name="already_voted">Вы уже проголосовали</string>
    <string name="current_results">Текущие результаты</string>
    <string name="hide_results">Скрыть результаты</string>
    <string name="applicant_city">Город заявителя:</string>
    <string name="manage_cities">Управление городами</string>
    <string name="add_city">Добавить</string>
    <string name="enter_city_hint">Название города…</string>
    <string name="cities_list_empty">Города ещё не добавлены</string>
    <string name="city_added">Город добавлен</string>
    <string name="city_deleted">Город удалён</string>
    <string name="city_name_empty">Введите название города</string>
    <string name="no_archived_surveys">Архивированных опросов нет</string>
</resources>