<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back"
    android:paddingTop="44dp">

    <TextView
        android:id="@+id/ChangeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/personal_info_change"
        android:textColor="@color/white"
        android:textSize="@dimen/titleTextSize"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etNameChange"
            android:background="@drawable/edit_text_change"
            android:paddingHorizontal="14dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_user_name"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etDateChange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/date_format"
            android:background="@drawable/edit_text_change"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:paddingHorizontal="14dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            />

        <TextView
            android:id="@+id/cityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <AutoCompleteTextView
            android:id="@+id/etCityChange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/select_city"
            android:background="@drawable/edit_text_change"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:inputType="none"
            android:layout_marginBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/passwordTitleChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etPasswordChange"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_change"
            android:paddingHorizontal="14dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textColorHint="@color/white_50"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/confirm_change_button"
        app:strokeWidth="0dp"
        app:strokeColor="@android:color/transparent"
        android:textColor="@color/dark"
        android:backgroundTint="@color/neon"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/confirm"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>