<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="20dp"
    app:strokeColor="?attr/colorPrimary"
    app:strokeWidth="2dp"
    app:cardBackgroundColor="#01292B"
    app:cardElevation="2dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/voting_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_recycler_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_regular"
            android:textAlignment="textStart"
            android:lineSpacingMultiplier="1"/>

        <Button
            android:id="@+id/vote_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/vote"
            android:textSize="14sp"
            android:textColor="#011314"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="#AEAF50"
            app:cornerRadius="20dp"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/voting_archive_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/end_survey"
            android:textSize="14sp"
            android:textColor="#011314"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/red"
            app:cornerRadius="20dp"
            android:layout_gravity="start"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>