<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#011314"
    android:paddingTop="44dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="@dimen/titleTextSize"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/smallLayoutPadding"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="35dp"
                android:paddingHorizontal="20dp"
                android:orientation="vertical"
                android:background="@android:color/transparent"
                android:gravity="center">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_user"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textColor="@color/white_50"
                        android:textSize="16sp"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="@dimen/smallLayoutPadding"/>

                    <TextView
                        android:id="@+id/user_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_50"
                        android:textSize="16sp"
                        android:text="@string/default_value"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surveys_completed"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="@dimen/layoutPadding"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_value"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <!-- Единый фрейм с кнопками: Личные данные, Заявки, Тема приложения -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/light_green"
                        app:strokeWidth="0dp">

                        <!-- Кнопка: Личные данные -->
                        <Button
                            android:id="@+id/alter_data"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:text="@string/change_personal_info"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:gravity="center_vertical|start"
                            android:paddingStart="16dp"
                            app:strokeWidth="0dp"
                            android:textColor="@color/white"
                            />

                        <!-- Кнопка: Мои Заявки -->
                        <Button
                            android:id="@+id/my_requests"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/my_requests"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:gravity="center_vertical|start"
                            android:paddingStart="16dp"
                            app:strokeWidth="0dp"
                            android:textColor="@color/white"
                            />

                        <!-- Тема приложения с Toggle -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:paddingVertical="12dp"
                            android:paddingHorizontal="16dp">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal"
                                android:gravity="center_vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="16sp"
                                    android:text="@string/theme_app"
                                    android:textColor="@color/white"
                                    />

                            </LinearLayout>

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/theme_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:thumbTintMode="src_atop"
                                android:trackTintMode="src_atop" />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <!-- Кнопка выхода (отдельно) -->
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:textAllCaps="false"
        android:paddingVertical="14dp"
        app:cornerRadius="12dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#01292B"
        app:itemIconSize="20dp"
        app:itemIconTint="@color/white"
        app:menu="@menu/menu_bottom_nav_user"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        android:layout_gravity="bottom"/>

</LinearLayout>